Cleanup and refactoring, removing some Java 8 usage and unused classes.